syntax = "proto3";
option java_package = "com.proto.prime";
option java_multiple_files = true;

service FavoriteBeerService {
  rpc AddBeerToFavorite(AddBeerToFavoriteRequest) returns (AddBeerToFavoriteResponse) {};
  rpc RemoveBeerToFavorite(RemoveBeerToFavoriteRequest) returns (RemoveBeerToFavoriteResponse) {};
}

message AddBeerToFavoriteRequest {
  string userId = 1;
  string beerId = 2;
}

message AddBeerToFavoriteResponse {


}

message RemoveBeerToFavoriteRequest {
  string userId = 1;
  string beerId = 2;

}

message RemoveBeerToFavoriteResponse {

}
